crates/nash-report/src/snapshots/nash_report__canonicalize__branches__unbound_alias_variable.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
UNBOUND TYPE VARIABLE

  × The `Box` type alias uses an unbound type variable `a` in its definition:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: You probably need to change the declaration to something like this:

            type alias Box 'a = ...

        Why? Well, imagine one `Box` where `a` is an Int and another where it is a Bool.
        When we explicitly list the type variables, the type checker can see that they
        are actually different types.
