crates/nash-report/src/snapshots/nash_report__canonicalize__branches__unbound_union_variables.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type Box = Box 'a 'b"
---
nash::names::type_vars_unbound_in_union

  × Type variables a and b are unbound in the `Box` type definition:
   ╭─[Main.nash:1:17]
 1 │ type Box = Box 'a 'b
   ·                 ─
   ╰────
  help: Declare the type variables:

            type Box 'a 'b = ...
