crates/nash-report/src/snapshots/nash_report__canonicalize__branches__unused_alias_variable.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
  × Type alias `Box` does not use the `a` type variable.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: Remove a from the declaration:

            type alias Box = ...
