crates/nash-report/src/snapshots/nash_report__canonicalize__branches__unused_alias_variables.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type alias Box 'a 'b = Int"
---
nash::names::type_vars_messed_up_in_alias

  × Type variables a and b are unused in the `Box` definition.
   ╭─[Main.nash:1:17]
 1 │ type alias Box 'a 'b = Int
   ·                 ─
   ╰────
  help: Remove a and b from the declaration:

            type alias Box = ...
